--- a/test-mail.html
+++ b/test-mail.html
@@ -48,7 +48,7 @@
                 <p class="content-mail__text"><span class="content-mail__text_light-gray">Дата и время:</span> 01.01.2019, 12:00:00 </p>
                 <p class="content-mail__text"><span class="content-mail__text_light-gray">Процесс:</span> Прием на работу </p>
                 <p class="content-mail__text"><span class="content-mail__text_light-gray">Задание:</span> Согласовать с фактическим руководителем </p>
-                <a class="content-mail__link" href="http://10.4.126.25/tasks/form/59643dc5-1024-11ea-a29b-0242bb869c58">http://10.4.126.25/tasks/form/59643dc5-1024-11ea-a29b-0242bb869c58</a>
+                <a class="content-mail__link" href="">http:</a>
                 <p class="content-mail__text content-mail__text_last-child">Для входа используйте свой логин <span class="content-mail__text_bold">PupkinVV</span></p>
                 <table class="button content-mail__button success radius small"><tr><td><table><tr><td><a href="http://10.4.126.25/tasks/form/59643dc5-1024-11ea-a29b-0242bb869c58">ПЕРЕЙТИ К ЗАДАНИЮ</a></td></tr></table></td></tr></table>
             
